--- a/Exercice_header/index.html
+++ b/Exercice_header/index.html
@@ -14,7 +14,6 @@
             <nav>
                 <h1>Mon header</h1>
                 <ul>
-                    <li style="float: right;"></li>
                     <li><a href="">Acceuil</a></li>
                     <li><a href="">Part1</a></li>
                     <li><a href="">Part2</a></li>
@@ -23,10 +22,11 @@
                 </ul>
             </nav>
         </div>
-        <div class="content">
-            <img src="Images/andrea-de-santis-D1oV1M3Mi8A-unsplash.jpg" alt="">
-            <div class="contenu"> 
-            <p class="texte">Je vais à l'école</p></div>
+        <div id="vid">
+            <video src="Images/Pexels Videos 2278095.mp4" autoplay="true" muted loop></video>
+            <div> 
+            <p class="texte">Je vais à l'école</p>
+        </div>
         </div>
     </header>
 
