--- a/Exercice_header/index.html
+++ b/Exercice_header/index.html
@@ -10,9 +10,9 @@
 <body>
     
     <header>
-        <div>
+        <div class="firstdiv">
+            <h1>Mon header</h1>
             <nav>
-                <h1>Mon header</h1>
                 <ul>
                     <li><a href="">Acceuil</a></li>
                     <li><a href="">Part1</a></li>
@@ -24,11 +24,10 @@
         </div>
         <div id="vid">
             <video src="Images/Pexels Videos 2278095.mp4" autoplay="true" muted loop></video>
-            <div> 
-            <p class="texte">Je vais à l'école</p>
+            <div id="text"> 
+            <p class="texte">Je mange beaucoup</p>
         </div>
         </div>
-    </header>
-
+    </header>                                                                           
 </body>
 </html>
