--- a/Exercice_header/index.html
+++ b/Exercice_header/index.html
@@ -15,10 +15,10 @@
             <nav>
                 <ul>
                     <li><a href="">Acceuil</a></li>
-                    <li><a href="">Part1</a></li>
-                    <li><a href="">Part2</a></li>
-                    <li><a href="">Part3</a></li>
-                    <li><a href="">Part4</a></li>
+                    <li><a href="">Lieux</a></li>
+                    <li><a href="">Prestations</a></li>
+                    <li><a href="">Options</a></li>
+                    <li><a href="">A propos</a></li>
                 </ul>
             </nav>
         </div>
