--- a/Exercice_header_2/index.html
+++ b/Exercice_header_2/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/296c7bb592.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Nouveau Header</title>
 </head>
 <body>
     <header>
+        
         <nav>
             <ul>
-                <li class="premier_nav"><a href="">En</a></li>
-                <li class="deuxieme_nav"><a href="">Call us</a></li>
-                <li class="troisieme_nav"><a href="">Book now</a></li>
+                <li><span><a class="logo" href="#"><i class="fa-brands fa-app-store"><p id="aris">aris hotel</p><p id="paleo">paleochora crete</p></i></a></span></li>
+                <li class="premier_nav"><a href="#">En</a></li>
+                <li class="deuxieme_nav"><a href="#">Call us</a></li>
+                <div id="nav">
+                <li class="troisieme_nav"><a href="#">Book now</a></li>
+                </div>
             </ul>
         </nav>
         <video autoplay="true" muted loop src="images/pexels-jess-vide-5230240.mp4"></video>
@@ -22,6 +27,14 @@
             <h1 class="deuxieme_titre">Nuture</h1>
             <h1 class="troisieme_titre">Your soul</h1>
         </div>
+        <div id="messenger">
+            <span><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></span>
+        </div>
     </header>
+    <div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam illo ipsa rerum odio totam voluptatibus esse blanditiis optio praesentium est dignissimos, repellendus ullam accusantium aliquam alias necessitatibus sed, consequuntur, asperiores voluptas dolores? Distinctio commodi exercitationem aspernatur, voluptatem repellat cumque provident eius similique molestiae sit recusandae rem eaque, vel dolore qui laborum laboriosam. Quasi, soluta! Debitis cumque magnam dolorem, beatae odio, enim itaque nihil aperiam, tempora praesentium architecto consequuntur? Aperiam voluptates impedit consectetur nemo, dolorem iste minima dolorum ipsum magni eveniet ab quasi iure, perspiciatis excepturi! Repellendus corporis cumque neque, iusto laborum fugit commodi beatae asperiores, esse totam veritatis obcaecati id molestias officia aut quia dignissimos cum sapiente! Autem nam ad corrupti, nulla dolorum natus sed iure harum eligendi eaque! Repudiandae reprehenderit adipisci mollitia, sit veniam dolores! Doloribus distinctio quis nihil aperiam odio optio quibusdam officia, corporis qui asperiores vitae cupiditate voluptates, nulla quod et quam provident officiis iusto eligendi assumenda ab laboriosam fugiat. Blanditiis, ipsum nam eveniet itaque nisi ipsa omnis distinctio commodi quo architecto reprehenderit illum iure? Architecto corporis eius, cupiditate eveniet libero in obcaecati recusandae quo consectetur atque, impedit dolores ipsam. Sunt quae non magni quis repellendus dignissimos excepturi ea, animi culpa optio est iusto, minima veniam et inventore cumque, asperiores saepe eius consequuntur neque ab id? Labore facilis earum doloribus magnam repellendus officia assumenda, minus delectus dignissimos sint eligendi iusto veritatis vero ad quaerat pariatur fugiat! Veniam cumque minima, ratione recusandae fugit esse sunt odit repellat porro ea facere temporibus modi hic exercitationem quasi iste necessitatibus iure ipsum dolorem, earum dignissimos aliquam minus? Ducimus quasi voluptates fugit aperiam, commodi ea possimus dignissimos nemo totam labore necessitatibus, nihil quae cupiditate ullam iure consequuntur eos. Delectus sunt facere ut et possimus itaque consectetur perspiciatis iusto, quasi pariatur, quidem neque. Atque at ipsa quidem, eaque earum sapiente labore id ipsum dolor inventore itaque esse veniam voluptatem? Numquam accusamus minus optio distinctio officiis, eligendi natus eos quisquam, repellat nesciunt reiciendis aliquam, repellendus et fugit illo quae ipsum doloribus unde molestiae alias. Id quibusdam, illum molestias sint, nostrum nam quidem dolores aspernatur aut repudiandae iure quasi nihil. Nulla, neque? Iure aliquid cumque mollitia pariatur ratione velit aperiam possimus perferendis, voluptas ex dolore doloribus soluta temporibus dolores ipsum sapiente dicta in. Ipsam minus praesentium, porro possimus deserunt pariatur! Earum impedit necessitatibus dignissimos asperiores eius voluptatibus quis! Facere, labore. Incidunt vero eius veniam ut vitae facere magni nulla voluptatum culpa. Placeat repudiandae alias quae quos explicabo facere magnam labore quis culpa. Vero corrupti magni aut at velit necessitatibus modi maxime nulla, doloremque iste tempora, similique in inventore consectetur accusantium. In hic fuga optio explicabo voluptatem facere quaerat ratione cupiditate, porro quas nesciunt, culpa enim. Asperiores corrupti, perferendis sunt odit, atque quis dolorem, ducimus provident quae odio sint quibusdam obcaecati molestiae praesentium nesciunt. Eveniet sequi illo molestiae autem. Recusandae, eum voluptas debitis cumque omnis aliquam rem cupiditate eius consectetur harum fugiat, saepe ut deleniti at sint sunt reiciendis accusamus! Inventore eos, tempore sapiente fugit exercitationem unde architecto harum, voluptatem debitis quo dicta aut reiciendis corrupti!
+        </p>
+    </div>
 </body>
 </html>
