--- a/Exercice_header_2/index.html
+++ b/Exercice_header_2/index.html
@@ -16,9 +16,7 @@
                 <li><span><a class="logo" href="#"><i class="fa-brands fa-app-store"><p id="aris">aris hotel</p><p id="paleo">paleochora crete</p></i></a></span></li>
                 <li class="premier_nav"><a href="#">En</a></li>
                 <li class="deuxieme_nav"><a href="#">Call us</a></li>
-                <div id="nav">
-                <li class="troisieme_nav"><a href="#">Book now</a></li>
-                </div>
+                <li ><a href="#" id="nav"class="troisieme_nav"><p class="book">Book now</p></a></li>
             </ul>
         </nav>
         <video autoplay="true" muted loop src="images/pexels-jess-vide-5230240.mp4"></video>
