Commencement de la partie principale

--- a/Site_web/index.html
+++ b/Site_web/index.html
@@ -25,7 +25,10 @@
     </header>
 
     <section id="image-principal">
-        <div class="wrapper"></div>
+        <div class="wrapper">
+            <h2>Organisez votre <br> <strong>voyage sur mesure</strong></h2>
+            <a href="#" class="button-1">Par ici</a>
+        </div>
     </section>
     <section id="etapes">
         <div class="wrapper"></div>
