--- a/corps_de_page/index.html
+++ b/corps_de_page/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div id="div_img1" class="div_image">
-        <img src="/images/camylla-battani-A5E-ym6WyGM-unsplash.jpg" alt="">
+        <img id="image1" src="/images/camylla-battani-A5E-ym6WyGM-unsplash.jpg" alt="">
         <p id="first_para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, debitis dolores ad qui unde animi doloremque dolore natus id voluptatibus quaerat deserunt ipsa adipisci nesciunt officia cumque veniam provident cupiditate, aut eligendi. Officia earum expedita, doloribus, nulla repudiandae ducimus in praesentium quam, tenetur saepe ratione provident reprehenderit. Repellat, repellendus consectetur!</p>
     </div>
     <div id="div_img2" class="div_image">
-       <img src="/images/convertkit-n1m4Ftm2vs8-unsplash.jpg" alt="">
+       <img id="image2" src="/images/convertkit-n1m4Ftm2vs8-unsplash.jpg" alt="">
        <p id="second_para" class="para2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, debitis dolores ad qui unde animi doloremque dolore natus id voluptatibus quaerat deserunt ipsa adipisci nesciunt officia cumque veniam provident cupiditate, aut eligendi. Officia earum expedita, doloribus, nulla repudiandae ducimus in praesentium quam, tenetur saepe ratione provident reprehenderit. Repellat, repellendus consectetur!</p>
     </div>
     <div id="div_img3" class="div_image">
