--- a/corps_de_page/index.html
+++ b/corps_de_page/index.html
@@ -17,8 +17,17 @@
        <p id="second_para" class="para2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, debitis dolores ad qui unde animi doloremque dolore natus id voluptatibus quaerat deserunt ipsa adipisci nesciunt officia cumque veniam provident cupiditate, aut eligendi. Officia earum expedita, doloribus, nulla repudiandae ducimus in praesentium quam, tenetur saepe ratione provident reprehenderit. Repellat, repellendus consectetur!</p>
     </div>
     <div id="div_img3" class="div_image">
-       <img src="/images/windows-3f04FMm_Jqk-unsplash.jpg" alt="">
-       <p id="third_para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo, debitis dolores ad qui unde animi doloremque dolore natus id voluptatibus quaerat deserunt ipsa adipisci nesciunt officia cumque veniam provident cupiditate, aut eligendi. Officia earum expedita, doloribus, nulla repudiandae ducimus in praesentium quam, tenetur saepe ratione provident reprehenderit. Repellat, repellendus consectetur!</p>
+        <div class="card">
+            <div class="card-front">
+                <img src="/images/windows-3f04FMm_Jqk-unsplash.jpg" alt="">
+            </div>
+            <div class="card-back">
+                <p>
+                    <img src="/images/windows-3f04FMm_Jqk-unsplash.jpg" alt="">
+                </p>
+                <p id="third_para">Lorem, ipsum dolor sit amet  consectetur adipisicing elit. Illo, debitis dolores ad qui unde animi doloremque dolore natus id voluptatibus quaerat deserunt ipsa adipisci nesciunt officia cumque veniam provident cupiditate, aut eligendi. Officia earum expedita, doloribus, nulla repudiandae ducimus in praesentium quam, tenetur saepe ratione provident reprehenderit. Repellat, repellendus consectetur!</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
