Debut du travail de youtube

--- a/clone-youtube/index.html
+++ b/clone-youtube/index.html
@@ -32,6 +32,10 @@
                 <li><a href="#"><i class="fa-solid fa-compass"></i>Explorer</a></li>
                 <li><a href="#">Shorts</a></li>
                 <li><a href="#"><i class="fa-solid fa-rectangle-history-circle-plus"></i>Abonnements</a></li>
+                <span></span>
+                <li><a href="#">Blibliothèque</a></li>
+                <li><a href="#">Historique</a></li>
+                <span class="sep"></span>
             </ul>
         </div>
     </div>
