Debut du travail de youtube

--- a/clone-youtube/index.html
+++ b/clone-youtube/index.html
@@ -38,6 +38,9 @@
                 <span class="sep"></span>
             </ul>
         </div>
+        <div class="le_contenu">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore praesentium pariatur deleniti accusamus totam, quidem in officia aperiam eum recusandae at fuga a culpa officiis accusantium ad aliquid est, eos ipsum quam natus nihil quia! Dolores quas eum maxime recusandae eligendi architecto aut, rem id mollitia repellat praesentium perferendis nesciunt.</p>
+        </div>
     </div>
 </body>
 </html>
