--- a/clone-youtube/index.html
+++ b/clone-youtube/index.html
@@ -5,19 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/youtube.png">
     <script src="https://kit.fontawesome.com/296c7bb592.js" crossorigin="anonymous"></script>
     <title>Youtube</title>
 </head>
 <body>
     <div class="container-header">
         <div class="logo">
-            <span><i class="fa-solid fa-bars"></i></span>
-            <span><i class="fa-brands fa-youtube"></i></span>
+            <div class="log1">
+                <span><i class="fa-solid fa-bars"></i></span>
+            </div>
+            <div class="log2">
+                <span><i class="fa-brands fa-youtube"></i></span>
+            </div>
+            <div class="log3">
+                <p>Youtube</p>
+            </div>
         </div>
         <div class="recherche">
-            <input type="search" placeholder="Rechercher">
-            <span><i class="fa-solid fa-microphone"></i></span>
-            <span><i class="fa-solid fa-magnifying-glass"></i></span>
+            <div class="rech1">
+                <input type="search" placeholder="Rechercher">
+            </div>
+            <div class="rech2">
+                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+            </div>
+            <div class="rech3">
+                <span><i class="fa-solid fa-microphone"></i></span>
+            </div>
         </div>
         <div class="connexion">
             <span><i class="fa-solid fa-grid-4"></i></span>
@@ -36,10 +50,54 @@
                 <li><a href="#">Blibliothèque</a></li>
                 <li><a href="#">Historique</a></li>
                 <span class="sep"></span>
+                <p class="para_nav">Le meilleur de Youtube</p>
+                <li><a href="#">Musique</a></li>
+                <li><a href="#">Sport</a></li>
+                <li><a href="#">Jeux vidéo</a></li>
+                <li><a href="#">Actualités</a></li>
+                <li><a href="#">En direct</a></li>
+                <li><a href="#">Mode et beauté</a></li>
+                <li><a href="#">Savoirs & Cultures</a></li>
+                <li><a href="#">Vidéo à 360°</a></li>
+                <span class="sep"></span>
+                <li><a href="#">Chaînes</a></li>
+                <span class="sep"></span>
+                <p class="para_nav">Autres contenus Youtube</p>
+                <li><a href="#">En direct</a></li>
+                <span class="sep"></span>
+                <li><a href="#">Paramètres</a></li>
+                <li><a href="#">Historique des signal…</a></li>
+                <li><a href="#">Aide</a></li>
+                <li><a href="#">Envoyer des commen…</a></li>
             </ul>
         </div>
         <div class="le_contenu">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore praesentium pariatur deleniti accusamus totam, quidem in officia aperiam eum recusandae at fuga a culpa officiis accusantium ad aliquid est, eos ipsum quam natus nihil quia! Dolores quas eum maxime recusandae eligendi architecto aut, rem id mollitia repellat praesentium perferendis nesciunt.</p>
+            <div class="niv_1">
+                <span class="sep_1"></span>
+                    <div class="onglets">
+                        <ul>
+                            <li><a href="#">Tous</a></li>
+                            <li><a href="#">Sport</a></li>
+                            <li><a href="#">Football</a></li>
+                            <li><a href="#">Basketball</a></li>
+                            <li><a href="#">Tennis</a></li>
+                            <li><a href="#">VolleyBall</a></li>
+                            <li><a href="#">Tous</a></li>
+                            <li><a href="#">Tous</a></li>
+                            <li><a href="#">Tous</a></li>
+                            <li><a href="#">Sport Mécanique</a></li>
+                            <li><a href="#">Formules 1</a></li>
+                            <li><a href="#">Moto GP</a></li>
+                            <li><a href="#">Rallye</a></li>
+                            <li><a href="#">Cyclisme</a></li>
+                            <li><a href="#">Trek</a></li>
+                            <li><a href="#">Dev</a></li>
+                            <li><a href="#">Javascript</a></li>
+                            <li><a href="#">Autres</a></li>
+                        </ul>
+                    </div>
+                <span class="sep_2"></span>
+            </div>
         </div>
     </div>
 </body>
