--- a/clone-youtube/index.html
+++ b/clone-youtube/index.html
@@ -27,16 +27,17 @@
                 <input type="search" placeholder="Rechercher">
             </div>
             <div class="rech2">
-                <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                <button type="submit"><span><i class="fa-solid fa-magnifying-glass"></i></span></button> 
             </div>
             <div class="rech3">
-                <span><i class="fa-solid fa-microphone"></i></span>
+                <span><a class="micro" href="#"><i class="fa-solid fa-microphone"></i></a></span>
             </div>
         </div>
         <div class="connexion">
+            <span><a href="#"><img class="le_grid" src="/grid.png" alt=""></a></span>
+            <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
             <span><i class="fa-solid fa-grid-4"></i></span>
             <span><i class="fa-solid fa-user"></i></span>
-            <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
         </div>
     </div>
     <div class="le_corps">
