--- a/yoojo/index.html
+++ b/yoojo/index.html
@@ -29,15 +29,17 @@
                 </div>
             </div>
         </nav>
-        <div id="text_btn">
-            <p class="btn_nv"><a href="#">Nouveau</a></p>
-            <p class="btn_payez"><a href="#">Payez en ticket CESU</a></p>
-        </div>
-        <div id="text">
-            <p>Trouvez le prestataire idéal pour tous les services du quotidien</p>
-        </div>
-        <div id="btn_anim">
-
+        <div id="div_parent_text">
+            <div id="text_btn">
+                <p class="btn_nv"><a href="#">Nouveau</a></p>
+                <p class="btn_payez"><a href="#">Payez en ticket CESU</a></p>
+            </div>
+            <div id="text">
+                <p>Trouvez le prestataire idéal pour tous les services du quotidien</p>
+            </div>
+            <div id="btn_anim">
+    
+            </div>
         </div>
         <img src="/images/home-bg-4dc4b66b752c785811e5c6b1d3df1f90b953d05e0ff367ff34f8823f34a0036a.svg" alt="Image_principale" class="image_principale">
     </header>
