--- a/yoojo/index.html
+++ b/yoojo/index.html
@@ -43,5 +43,306 @@
         </div>
         <img src="/images/home-bg-4dc4b66b752c785811e5c6b1d3df1f90b953d05e0ff367ff34f8823f34a0036a.svg" alt="Image_principale" class="image_principale">
     </header>
+    <div id="div_parent_presta">
+        <div id="div_presta">
+            <div><p class="presta"><a class="presta_lien" href="#">Prestataires qualifiés</a></p></div>
+            <div><p class="presta"><a class="presta_lien" href="#">Prestations assurées</a></p></div>
+            <div><p class="presta"><a class="presta_lien" href="#">Budget respecté</a></p></div>
+            <div><p class="presta"><a  class="presta_lien" href="#">Service encadré</a></p></div>
+        </div>
+    </div>
+    <div id="div_body_parent">
+        <div id="div_body_text">
+            <div class="text_gauche">
+                <h2 class="titre">De quel service avez vous besoin ?</h2>
+                <p class="body_text">Pour chaque situation, trouvez le prestataire dont les compétences répondent à <span class="retour_a_ligne">vos attentes et à votre niveau d'exigence.</span></p>
+            </div>
+            <div class="text_droit">
+                <p><span>-50%</span> crédit d'impôt selon la catégorie</p>
+            </div>
+        </div>
+        <div id="div_body">
+            <div class="div_cadres_parent">
+                <div class="div_cadres">
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/20-e8e98c9d1cf9069f52eeeb9826bcccc526915bed259858e7e44cbcfd04bc0c60.svg" alt="bricole">
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Bricolage</p> 
+                        </div>
+                    </div>
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/21-28ccab52831cd1868c6744f77d7fe7c304d645f0a6d3237351bd0692a646fb96.svg" alt="bricole">
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Jardinage</p> 
+                        </div>
+                    </div>
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/22-6bc86dbb1390e1b1a506269134feece1e0ac5028143c9f65b81d52b887af1a87.svg" alt="bricole">
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Déménagement</p> 
+                        </div>
+                    </div>
+                </div>
+                <div class="div_cadres">
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/23-2cef76ae43c8eca7e91cb445550a4a8931f7e7aea3a7e7c624fc7b155a989ddc.svg" alt="bricole">
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Ménage</p> 
+                        </div>
+                    </div>
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/28-7d5972fafb408b81cf6b28d3bee60843e4b0838fd4df54193e857620a89fb004.svg" alt="bricole">
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Enfants</p> 
+                        </div>
+                    </div>
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/24-98f36dcebef3e79fdad340e805f36f32d0cc9369066a317e5ee5096f8f9fa79f.svg">    
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Animaux</p>    
+                        </div>
+                    </div>
+                </div>
+                <div class="div_cadres">
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/25-bbf612f1c76ab9f689d1a2acc2097c9b7044f394ef539605576d830d570d26d2.svg" alt="bricole">
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Informatique</p> 
+                        </div>
+                    </div>
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/26-20060e9cd170d149293f337dd772800e836f8ab07d5bd2601e52c941e421d4a9.svg" alt="bricole">
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Aide à domicile</p> 
+                        </div>
+                    </div>
+                    <div class="cadre">
+                        <div class="div_cadre_img">
+                            <img class="img_cadre" src="https://d1b747rczec55w.cloudfront.net/assets/categories/29-018d670dbb24035a918f3a89ca4dbec5e9e0423897d633ccdf5e273af001ac4d.svg" alt="bricole">
+                        </div>
+                        <div class="div_cadre_text">
+                            <p class="text_cadre">Cours particuliers</p> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="div_cadre_2_parent">
+            <div class="div_body_text">
+                <h2 class="titre">Découvrez nos services du moment</h2>
+            </div>
+            <div class="div_cadre_2">
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img class="img_2" src="https://d1b747rczec55w.cloudfront.net/assets/categories/2002-aa57d00d216d9a24c8ed084ddbd2c39dbf91879fff3e94809e0349df72f94cd5.svg" alt="Taille de haie">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Taille de haie</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Prix moyen 42 €- 152 €</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/categories/3014-cbe8efa8b8fc0615a0738eb8c9f6e3c62040140ea9ffb5019cda0b8193c533e7.svg" class="img_2" alt="Aide">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Aide au déménagement</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Prix moyen 52 €- 149 €</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/categories/4001-f145744534c445655cdfaed5133716783f0adace552d3579369700fc17150117.svg" class="img_2" alt="Ménage">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Ménage à domicile</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Prix moyen 24 €- 59 €</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/categories/2001-e82d35c11486feb971d7677ff295a37e01f0b36be78175eb0dbb865594e3d29c.svg" class="img_2" alt="Tondre">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Tondre la pélouse</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Prix moyen 29 €- 68 €</p>
+                    </div>
+                </div>
+                <div class="cadre_2">
+                    <div class="img_cadre_2">
+                        <img src="https://d1b747rczec55w.cloudfront.net/assets/categories/1003-78c71cc44b0bcc66d728997d90b8804d565a3eb571acf18731b3726e2d4b15ec.svg" class="img_2" alt="Meubles">
+                    </div>
+                    <div class="text_cadre_2">
+                        <p class="text_cadre_2">Assemblage de meubles</p>
+                    </div>
+                    <div class="div_prix">
+                        <p class="prix_cadre_2">Prix moyen 30 €- 84 €</p>
+                    </div>
+                </div>
+            </div>
+            <div class="div_service">
+                <p><a class="service" href="#">Voir tous les services ></a></p>
+            </div>
+        </div>
+        <div class="div_body_text">
+            <h2 class="titre">Le service à domicile en toute sérénité</h2>
+        </div>
+        <div>
+            <div class="div_cadre_text_2_parent">
+                <div class="div_cadre_text_2">
+                    <div class="icon">
+                        <p></p>
+                    </div>
+                    <div class="div_titre_h3">
+                        <h3 class="titre_h3">Prestataires qualifiés</h3>
+                    </div>
+                    <div class="div_text_2">
+                        <p class="text_2">Tous les prestataires sont vérifiés, suivis et évalués pour chaque service rendu afin de vous garantir le meilleur niveau de satisfaction.</p>
+                    </div>
+                </div>
+                <div class="div_cadre_text_2">
+                    <div class="icon">
+                        <p></p>
+                    </div>
+                    <div class="div_titre_h3">
+                        <h3 class="titre_h3">Prestations assurées</h3>
+                    </div>
+                    <div class="div_text_2">
+                        <p class="text_2">Toutes les prestations sont couvertes par notre assurance AXA, qu’il s’agisse de dommages corporels ou matériels occasionnés chez vous, sans franchise.</p>
+                    </div>
+                </div>
+                <div class="div_cadre_text_2">
+                    <div class="icon">
+                        <p></p>
+                    </div>
+                    <div class="div_titre_h3">
+                        <h3 class="titre_h3">Budget respecté</h3>
+                    </div>
+                    <div class="div_text_2">
+                        <p class="text_2">Tous les prix sont définis à l’avance, les jobbers s’engagent à les respecter. Toutes les rémunérations sont déclenchées en ligne après votre accord.</p>
+                    </div>
+                </div>
+                <div class="div_cadre_text_2">
+                    <div class="icon">
+                        <p></p>
+                    </div>
+                    <div class="div_titre_h3">
+                        <h3 class="titre_h3">Service encadré</h3>
+                    </div>
+                    <div class="div_text_2">
+                        <p class="text_2">Notre service client est à votre disposition 7j/7 pour vous assurer une expérience parfaite de la prise de commande jusqu'à la fin de la prestation.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="div_specialiste_parent">
+            <div class="specialiste_texte">
+                <h2 class="titre">Spécialiste du service</h2>
+                <p class="specialiste_text">Tentez l’expérience et faites nous confiance comme plus de 375 000 clients qui <span class="ligne_spe">aujourd’hui profitent de leur temps libre.</span></p>
+            </div>
+            <div class="div_spec_icon">
+                <div class="div_spec">
+                    <div class="spec_ico"></div>
+                    <div class="spec_chiffre">
+                        <p class="p_chiffre">875 000</p>
+                    </div>
+                    <div class="spec_txt">
+                        <p class="p_txt">Jobs réalisés</p>
+                    </div>
+                </div>
+                <div class="div_spec">
+                    <div class="spec_ico"></div>
+                    <div class="spec_chiffre">
+                        <p class="p_chiffre">25 000</p>
+                    </div>
+                    <div class="spec_txt">
+                        <p class="p_txt">Jobbers actifs</p>
+                    </div>
+                </div>
+                <div class="div_spec">
+                    <div class="spec_ico"></div>
+                    <div class="spec_chiffre">
+                        <p class="p_chiffre">4,5/5</p>
+                    </div>
+                    <div class="spec_txt">
+                        <p class="p_txt">Note moyenne des jobbers</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="div_comment_parent">
+            <div class="div_comment_text">
+                <h2 class="titre">Comment ça marche ?</h2>
+            </div>
+            <div class="div_comment_cadres">
+                <div class="div_comment">
+                    <div class="div_comment_img">
+                        <img class="img_comment" src="https://d1b747rczec55w.cloudfront.net/assets/hiw-icon1-c2b46308c928256d1bc34d7fcb07a162a7140c3f120d810f55dc9db87de74627.svg" alt="Demande">
+                    </div>
+                    <p class="p_titre">Demandez un service</p>
+                    <p class="p_com_text">Remplissez le formulaire et obtenez</p>
+                    <p class="p_com_text">une estimation du prix et de la durée</p>
+                </div>
+                <div class="div_comment">
+                    <div class="div_comment_img">
+                        <img class="img_comment" src="https://d1b747rczec55w.cloudfront.net/assets/hiw-icon2-641d5c09d8789cb41711d0e41557929d8ee2a196bab3b2e47b875f03132b960e.svg" alt="Demande">
+                    </div>
+                    <p class="p_titre">Réservez votre jobber</p>
+                    <p class="p_com_text">Des jobbers compétents et proches</p>
+                    <p class="p_com_text">de chez vous vous proposent leurs</p>
+                    <p class="p_com_text">services</p>
+                </div>
+                <div class="div_comment">
+                    <div class="div_comment_img">
+                        <img class="img_comment" src="https://d1b747rczec55w.cloudfront.net/assets/hiw-icon3-b21fb9288ea360942c1a3a595cd3d5e481725e37e615bb42e74ced0a7d98a56d.svg" alt="Demande">
+                    </div>
+                    <p class="p_titre">Souriez, c'est fait !</p>
+                    <p class="p_com_text">Votre jobber vous rend service au</p>
+                    <p class="p_com_text">prix et à la date convenus</p>
+                </div>
+            </div>
+        </div>
+        <div class="div_vous_parent">
+            <div class="div_vous_text">
+                <p class="titre_vous">Vous avez un employé de maison ?</p>
+                <p class="text_vous">Automatisez la paie et le déclaratif de votre employé de maison. Obtenez des aides et 50 % de crédit d’impôt.</p>
+                <div class="decouvrir">
+                    <div>
+                        <p><a href="#">Découvrir Yoojo Direct</a></p>
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="div_vous_img">
+                <img class="img_vous" src="https://d1b747rczec55w.cloudfront.net/assets/yoojoDirectIllustration-9bc06f1818928be669e20d08f3a8d8701ee69abc031c15678074c65c24c82599.svg" alt="img_contact">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
